--- a/DocTimes/Views/DoctorProfile/Index.cshtml
+++ b/DocTimes/Views/DoctorProfile/Index.cshtml
@@ -15,7 +15,7 @@
                                     </div>
                                     <div class="col mt-4 mt-md-5 mt-lg-4 order-md-1 order-lg-0">
                                         <button class="btn btn-falcon-default btn-md mb-2 w-100" type="button"><span class="fas fa-comment me-1"> </span>Message</button>
-                                        <button class="btn btn-primary btn-md w-100" type="button"><span class="fas fa-heart me-1"> </span>Follow</button>
+                                        <a class="btn btn-primary btn-md w-100" href="/Booking/Calendar"><span class="fas fa-heart me-1"> </span>Book Appointment</a>
                                     </div>
                                     <div class="col mt-4 mt-md-5 mt-lg-4">
                                         <div class="row text-center">
@@ -73,7 +73,7 @@
                             <div class="d-flex position-relative align-items-center mb-2">
                                 <img class="d-flex align-self-center me-2 rounded-3" src="../../assets/img/logos/apple.png" alt="" width="50" />
                                 <div class="flex-1">
-                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Apple</a></h6>
+                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Squire Hospital</a></h6>
                                     <p class="mb-1">3243 associates</p>
                                 </div>
                             </div>
@@ -91,7 +91,7 @@
                             <div class="d-flex position-relative align-items-center mb-2">
                                 <img class="d-flex align-self-center me-2 rounded-3" src="../../assets/img/logos/intel-2.png" alt="" width="50" />
                                 <div class="flex-1">
-                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Intel</a></h6>
+                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Ibne Sinah</a></h6>
                                     <p class="mb-1">7652 associates</p>
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                             <div class="d-flex position-relative align-items-center mb-2">
                                 <img class="d-flex align-self-center me-2 rounded-3" src="../../assets/img/logos/facebook.png" alt="" width="50" />
                                 <div class="flex-1">
-                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Facebook</a></h6>
+                                    <h6 class="fs-9 mb-0"><a class="stretched-link" href="#!">Appollo</a></h6>
                                     <p class="mb-1">765 associates</p>
                                 </div>
                             </div>
@@ -110,7 +110,7 @@
             </div>
             <div class="card mb-3">
                 <div class="card-header bg-body-tertiary d-flex justify-content-between">
-                    <h5 class="mb-0">Activity log</h5><a class="font-sans-serif" href="../../app/social/activity-log.html">All logs</a>
+                    <h5 class="mb-0">Activity</h5><a class="font-sans-serif" href="../../app/social/activity-log.html">All logs</a>
                 </div>
                 <div class="card-body fs-10 p-0">
                     <a class="border-bottom-0 notification rounded-0 border-x-0 border border-300" href="#!">
