--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -199,38 +199,41 @@
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
+                                    
+                                   
                                     <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/lms.html">
+                                        <a class="nav-link" href="/Chart/Index">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">LMS</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Analyticts</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/project-management.html">
+                                        <a class="nav-link" href="/Chart/Report">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Management</span>
+                                                <span class="nav-link-text ps-1">Report</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/saas.html">
+                                        <a class="nav-link" href="/Chart/Barchart">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">SaaS</span>
+                                                <span class="nav-link-text ps-1">Bar Chart</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="dashboard/support-desk.html">
+                                        <a class="nav-link" href="/Chart/CandalStick">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Support desk</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Candal Stick</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
+                                     
                                 </ul>
                             </li>
 
@@ -861,7 +864,8 @@
     <script src="~/vendors/dayjs/dayjs.min.js"></script>
     <script src="~/vendors/tinymce/tinymce.min.js"></script>
     <script src="~/vendors/echarts/echarts.min.js"></script>
-    <script src="~/vendors/fontawesome/all.min.js"></script>
+    <script src="~/assets/js/echarts-example.js"></script>
+    <script src="~/vendors/fontawesome/all.min.js"></script>    
     <script src="~/vendors/lodash/lodash.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=window.scroll"></script>
 
