--- a/DocTimes/Views/Booking/Calendar.cshtml
+++ b/DocTimes/Views/Booking/Calendar.cshtml
@@ -53,8 +53,8 @@
         <!-- -------------------------------------------------------------- -->
         <!-- Login box.scss -->
         <!-- -------------------------------------------------------------- -->
-        <section class="section calender-section" id="calender-section">
-            <div class="container h-100">
+        <section class="section calender-section mt-5" id="calender-section">
+            <div class="container h-100 ">
                 <div class="calender-box">
                     <div class="user-calender-box">
                         <div class="row g-5">
@@ -75,8 +75,18 @@
                             <div class="col-xl-5 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="calender-right-box">
                                     <div class="right-tab-box">
+                                        <div class="form-group">
+                                            <h5 class="form-label">Treatment For?</h5>
+                                            <select class="form-select" aria-label="Default select example">
+                                                <option selected>Root Canel</option>
+                                                <option value="1">Braces</option>
+                                                <option value="2">Teeth Cleaning</option>
+                                                <option value="3">Teeth Whiting</option>
+                                            </select>
+                                        </div>
                                         <h5>How long do you need?</h5>
                                         <div class="inner-tab-box mb-0">
+                                           
                                             <ul class="nav nav-pills justify-content-start flex-nowrap" role="tablist">
                                                 <li class="nav-item">
                                                     <a class="nav-link active" data-bs-toggle="tab" href="#tab1" role="tab">
@@ -98,9 +108,9 @@
                                     </div>
                                     <div class="tab-content sedule-tab-content">
                                         <div class="form-group">
-                                            <label class="form-label">What time works best?</label>
+                                           @*  <label class="form-label">What time works best?</label> *@
                                             <select class="form-select" aria-label="Default select example">
-                                                <option selected>India Standard Time (6:32pm)</option>
+                                                <option selected>Bangladesh Standard Time (6:32pm)</option>
                                                 <option value="1">One</option>
                                                 <option value="2">Two</option>
                                                 <option value="3">Three</option>
