--- a/DocTimes/Views/Doctor/List.cshtml
+++ b/DocTimes/Views/Doctor/List.cshtml
@@ -67,7 +67,7 @@
                         <div class="row">
                             <div class="col-lg-8">
                                 <h5 class="mt-3 mt-sm-0">
-                                    <a class="text-1100 fs-9 fs-lg-8" href="../../../app/healthcare/doctor/doctor-profile.html">
+                                    <a class="text-1100 fs-9 fs-lg-8" href="#" data-spa="DoctorProfile/Index">
                                         Dr. Emily Davis, MBBS, MS (Pediatrician)
                                     </a>
                                 </h5>
