--- a/DocTimes/Views/DoctorPrescription/Create.cshtml
+++ b/DocTimes/Views/DoctorPrescription/Create.cshtml
@@ -184,8 +184,8 @@
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-9 animated-div">
                                 <div class="form-group">
-                                    <label for="CustomerEmail" class="form-label fw-semi-bold">Patient Age</label>
-                                    <input type="text" style="border-radius: 5px;" asp-for="CustomerEmail" id="CustomerEmail" class="form-control form-control-sm form-rounded fw-semi-bold" placeholder="Patient Age" />
+                                    <label for="CustomerEmail" class="form-label fw-semi-bold"> Age</label>
+                                    <input type="text" style="border-radius: 5px;" asp-for="CustomerEmail" id="CustomerEmail" class="form-control form-control-sm form-rounded fw-semi-bold" placeholder="Age" />
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-4 col-sm-6 col-9 animated-div">
