--- a/DocTimes/Views/Chart/CandalStick.cshtml
+++ b/DocTimes/Views/Chart/CandalStick.cshtml
@@ -5,7 +5,7 @@
             <div class="card-header">
                 <div class="row flex-between-end">
                     <div class="col-auto align-self-center">
-                        <h5 class="mb-0" data-anchor="data-anchor">Basic candlestick chart</h5>
+                        <h5 class="mb-0" data-anchor="data-anchor">How Booking is Growing</h5>
                     </div>
                     <div class="col-auto ms-auto">
                         <div class="nav nav-pills nav-pills-falcon flex-grow-1" role="tablist">
@@ -38,7 +38,7 @@
             <div class="card-header">
                 <div class="row flex-between-end">
                     <div class="col-auto align-self-center">
-                        <h5 class="mb-0" data-anchor="data-anchor">Candlestick mixed chart</h5>
+                        <h5 class="mb-0" data-anchor="data-anchor">How Many People Search You!</h5>
                     </div>
                     <div class="col-auto ms-auto">
                         <div class="nav nav-pills nav-pills-falcon flex-grow-1" role="tablist">
