--- a/DocTimes/Views/DoctorPrescription/Create.cshtml
+++ b/DocTimes/Views/DoctorPrescription/Create.cshtml
@@ -312,7 +312,7 @@
                     </div>
                     <div class="form-group">
                         <div class="form-group">
-                            <label for="InvoiceDateTime" class="form-label fw-semi-bold">Next Date</label>
+                            <label for="InvoiceDateTime" class="form-label fw-semi-bold">Next Meet Date</label>
                             <input type="date" asp-for="Invoice.InvoiceDateTime" id="InvoiceDateTime" class="form-control form-control-sm form-rounded fw-semi-bold" placeholder="Date" />
                         </div>
                     </div>
