--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Pinacle | Dashboard &amp; Web App Template</title>
+    <title>Pinacle | Dental Solution</title>
 
 
     <!-- ===============================================-->
@@ -92,7 +92,7 @@
 
                         <button class="btn navbar-toggler-humburger-icon navbar-vertical-toggle" data-bs-toggle="tooltip" data-bs-placement="left" title="Toggle Navigation"><span class="navbar-toggle-icon"><span class="toggle-line"></span></span></button>
 
-                    </div><a class="navbar-brand" href="index.html">
+                    </div><a class="navbar-brand" href="/">
                         <div class="d-flex align-items-center py-3">
                             <img class="me-2" src="~/assets/img/icons/spot-illustrations/falcon.png" alt="" width="40" /><span class="font-sans-serif text-primary">Pinacle</span>
                         </div>
@@ -111,7 +111,25 @@
                                 </a>
                                 <ul class="nav collapse show" id="dashboard">
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/WorkStatus/Progress"  >
+                                        <a class="nav-link" href="/Doctor/Calendar">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Calendar</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                   
+                                    <li class="nav-item">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="Patient/Index" data-id="1">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Patient</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                    
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/WorkStatus/Progress">
                                             <div class="d-flex align-items-center">
                                                 <span class="nav-link-text ps-1">Work Progress</span>
                                             </div>
@@ -119,9 +137,18 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="Patient/Index" data-id="1">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="DoctorPrescription/Create">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Patient</span>
+                                                <span class="nav-link-text ps-1">Prescribe</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link active" href="/Chat/Index">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Chat With Doctor</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -135,9 +162,18 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="Services/Index">
+                                        <a class="nav-link" style="cursor:pointer" href="/Patient/List">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Create Page</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Supplier List</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+
+                                    <li class="nav-item">
+                                        <a class="nav-link" style="cursor:pointer" href="/Patient/PaymentHistory">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1"> Patient Payment History</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -145,7 +181,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" style="cursor:pointer" href="/Patient/PaymentHistory">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Payment History</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                                <span class="nav-link-text ps-1">Supplier Payment History</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -159,6 +195,14 @@
                                         <!-- more inner pages-->
                                     </li>
                                     <li class="nav-item">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="PurchaseInvoice/create">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">Purchase Invoice</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
+                                    <li class="nav-item">
                                         <a class="nav-link"   href="/Doctor/CreateProfile">
                                             <div class="d-flex align-items-center">
                                                 <span class="nav-link-text ps-1">Create Your Profile</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
@@ -166,18 +210,12 @@
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
+                                   
+                                   
                                     <li class="nav-item">
-                                        <a class="nav-link active" href="/Chat/Index">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="Services/Index">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Chat With Doctor</span>
-                                            </div>
-                                        </a>
-                                        <!-- more inner pages-->
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" style="cursor:pointer" data-spa="DoctorPrescription/Create">
-                                            <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Prescribe</span>
+                                                <span class="nav-link-text ps-1">Create Service</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -190,11 +228,19 @@
                                         </a>
                                         <!-- more inner pages-->
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" style="cursor:pointer" href="/Patient/List">
+                                            <div class="d-flex align-items-center">
+                                                <span class="nav-link-text ps-1">User List</span><span class="badge rounded-pill ms-2 badge-subtle-success">New</span>
+                                            </div>
+                                        </a>
+                                        <!-- more inner pages-->
+                                    </li>
                                    
                                     <li class="nav-item">
-                                        <a class="nav-link" href="/Doctor/Calendar">
+                                        <a class="nav-link" style="cursor:pointer" data-spa="UserMenu/Create">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Calendar</span>
+                                                <span class="nav-link-text ps-1">User Menu Access</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -204,7 +250,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="/Chart/Index">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Analyticts</span>
+                                                <span class="nav-link-text ps-1">Analytics</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
@@ -228,7 +274,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="/Chart/CandalStick">
                                             <div class="d-flex align-items-center">
-                                                <span class="nav-link-text ps-1">Candal Stick</span>
+                                                <span class="nav-link-text ps-1">Search Statistics</span>
                                             </div>
                                         </a>
                                         <!-- more inner pages-->
