--- a/DocTimes/Views/Website/Index.cshtml
+++ b/DocTimes/Views/Website/Index.cshtml
@@ -352,7 +352,12 @@
                         <h1 class="text-white fw-light"> <span class="typed-text fw-bold" data-typed-text='["Welcome","To","Pinacle","Solutions"]'></span><br /></h1>
                         <p class="lead text-white opacity-75">Find And Book Your Doctor With time slot!</p><a class="btn btn-outline-light border-2 rounded-pill btn-lg mt-4 fs-9 py-2" href="/Doctor/List">Find Your Doctor<span class="fas fa-play ms-2" data-fa-transform="shrink-6 down-1"></span></a>
             </div>
-            <div class="col-xl-7 offset-xl-1 align-self-end mt-4 mt-xl-0"><a class="img-landing-banner rounded" href="../index.html"><img class="img-fluid d-dark-none" src="../assets/img/generic/dashboard-alt.jpg" alt="" /><img class="img-fluid d-light-none" src="../assets/img/generic/dashboard-alt-dark.png" alt="" /></a></div>
+                    <div class="col-xl-7 offset-xl-1 align-self-end mt-4 mt-xl-0">
+                        <a class="img-landing-banner rounded" href="../index.html">
+                            <img class="img-fluid d-dark-none" src="../assets/img/generic/DoctorDashboard.png" alt="" />
+                            <img class="img-fluid d-light-none" src="../assets/img/generic/DoctorDashboard.png" alt="" />
+                        </a>
+                    </div>
           </div>
         </div>
         <!-- end of .container-->
