--- a/DocTimes/Views/Shared/_DoctorLayout.cshtml
+++ b/DocTimes/Views/Shared/_DoctorLayout.cshtml
@@ -696,7 +696,7 @@
 
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="pages/user/settings.html">Settings</a>
-                                    <a class="dropdown-item" href="pages/authentication/card/logout.html">Logout</a>
+                                    <a class="dropdown-item"   href="/Website/Index">Logout</a>
                                 </div>
                             </div>
                         </li>
